<resources>
    <string name="app_name">LearnC</string>
    <string name="parse_app_id">AppId</string>
    <string name="parse_server">http://server.me:1337/parse</string>
    <string name="parse_client_id">ClientId</string>

    <string name="drawer_user">我的</string>
    <string name="drawer_home">首页</string>
    <string name="drawer_tutorial">在线教程</string>
    <string name="drawer_forum">淘知论坛</string>
    <string name="drawer_self_test">自我评测</string>
    <string name="drawer_setting">设置</string>
    <string name="drawer_about">关于</string>

    <string-array name="conversation_type">
        <item>提问</item>
        <item>分享</item>
        <item>讨论</item>
    </string-array>
</resources>
